--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@
                             <img src="https://via.placeholder.com/300x200/764ba2/ffffff?text=О+разработке" alt="О разработке" style="width: 100%; border-radius: 15px;">
                         </div>
                         <div class="about-text">
-                            <p>Меня зовут Кочетков Никита, я являюсь студентом 3 курса направления Информационные системы и технологии. Изучаю современные технологии и создаю</p>
-                            <p>проекты, которые помогают людям решать реальные задачи. Данный проект является лабораторными работами по Wed-разработкею</p>
+                            <p>Меня зовут Кочетков Никита, я являюсь студентом 3 курса направления Информационные системы и технологии. Изучаю современные технологии и создаю проекты, которые помогают людям решать реальные задачи. Данный проект является лабораторными работами по Wed-разработке.</p>
                             <p>Постоянно совершенствую свои навыки, изучаю новые технологии и стремлюсь создавать качественные, удобные и красивые сервисы и приложения.</p>
                         </div>
                     </div>
