--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <section id="home" aria-labelledby="home-title">
             <h1 id="home-title">Привет! Я начинающий разработчик</h1>
             <figure>
-                <img src="https://via.placeholder.com/200" alt="Портрет разработчика" width="200" height="200">
-                <figcaption>Фото для портфолио (замените на своё).</figcaption>
+                <img src="https://cdnstatic.rg.ru/uploads/images/207/52/27/2p_udalenka_v_2k.jpg" alt="Портрет разработчика" width="200" height="200">
             </figure>
             <p>Делаю небольшие учебные и пет‑проекты, учусь веб‑разработке и люблю аккуратную семантическую разметку.</p>
             <p>На этом сайте вы найдёте краткую информацию обо мне, примеры кода и способы связи.</p>
