--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#home">Главная</a></li>
                 <li><a href="#about">Обо мне</a></li>
                 <li><a href="#projects">Проекты</a></li>
+                <li><a href="projects.html">Все проекты</a></li>
                 <li><a href="#quote">Цитата</a></li>
                 <li><a href="#contacts">Контакты</a></li>
             </ul>
