--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                 <li>
                     <article>
                         <h3><a href="#proj-card">HTML‑карточка</a></h3>
-                        <p>Фрагмент разметки карточки проекта без стилей.</p>
+                        <p>Фрагмент разметки карточки проекта.</p>
                         <p><a id="proj-card" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
