--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Портфолио разработчика</title>
     <meta name="description" content="Портфолио начинающего веб-разработчика: обо мне, проекты, цитата и контакты.">
 </head>
