--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Все проекты — Портфолио</title>
     <meta name="description" content="Страница со ссылками на проекты и дополнительной информацией.">
 </head>
@@ -41,7 +42,7 @@
                 <li>
                     <article>
                         <h3><a href="#proj-card">HTML‑карточка</a></h3>
-                        <p>Фрагмент разметки карточки проекта.</p>
+                        <p>Фрагмент разметки карточки проекта без стилей.</p>
                         <p><a id="proj-card" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
@@ -103,4 +104,3 @@ greet('Никита');</code></pre>
     </footer>
 </body>
 </html>
-
