--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Все проекты — Портфолио</title>
     <meta name="description" content="Страница со ссылками на проекты и дополнительной информацией.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="#projects">Проекты</a></li>
-                <li><a href="#extras">Дополнительно</a></li>
-                <li><a href="#contact">Связаться</a></li>
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="#projects">Проекты</a></li>
+                <li class="nav__item"><a class="nav__link" href="#extras">Дополнительно</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contact">Связаться</a></li>
             </ul>
         </nav>
         <h1>Все проекты</h1>
@@ -22,40 +25,40 @@
     </header>
 
     <main>
-        <section id="projects" aria-labelledby="projects-title">
+        <section id="projects" aria-labelledby="projects-title" class="section section--projects">
             <h2 id="projects-title">Список проектов</h2>
             <ol>
                 <li>
-                    <article>
-                        <h3><a href="#proj-console">Консольный скрипт</a></h3>
-                        <p>Минимальный проект с выводом сообщения в консоль.</p>
+                    <article class="card">
+                        <h3 class="card__title"><a href="#proj-console">Консольный скрипт</a></h3>
+                        <p class="card__text">Минимальный проект с выводом сообщения в консоль.</p>
                         <p><a id="proj-console" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
                 <li>
-                    <article>
-                        <h3><a href="#proj-sum">Функция сложения</a></h3>
-                        <p>Небольшой пример с объявлением и использованием функции.</p>
+                    <article class="card">
+                        <h3 class="card__title"><a href="#proj-sum">Функция сложения</a></h3>
+                        <p class="card__text">Небольшой пример с объявлением и использованием функции.</p>
                         <p><a id="proj-sum" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
                 <li>
-                    <article>
-                        <h3><a href="#proj-card">HTML‑карточка</a></h3>
-                        <p>Фрагмент разметки карточки проекта без стилей.</p>
+                    <article class="card">
+                        <h3 class="card__title"><a href="#proj-card">HTML‑карточка</a></h3>
+                        <p class="card__text">Фрагмент разметки карточки проекта.</p>
                         <p><a id="proj-card" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
             </ol>
 
-            <section aria-labelledby="samples-title">
+            <section aria-labelledby="samples-title" class="section section--samples">
                 <h3 id="samples-title">Небольшие примеры кода</h3>
-                <article>
-                    <h4>Пример 1 — вывод в консоль</h4>
+                <article class="card">
+                    <h4 class="card__title">Пример 1 — вывод в консоль</h4>
                     <pre><code>console.log('Hello from projects page');</code></pre>
                 </article>
-                <article>
-                    <h4>Пример 2 — простая функция</h4>
+                <article class="card">
+                    <h4 class="card__title">Пример 2 — простая функция</h4>
                     <pre><code>function greet(name) {
   return 'Привет, ' + name + '!';
 }
@@ -65,30 +68,30 @@ greet('Никита');</code></pre>
             </section>
         </section>
 
-        <section id="extras" aria-labelledby="extras-title">
+        <section id="extras" aria-labelledby="extras-title" class="section section--extras">
             <h2 id="extras-title">Дополнительно</h2>
             <article>
                 <h3>Идеи для будущих проектов</h3>
                 <ul>
                     <li>Мини‑блог на чистом HTML‑контенте</li>
                     <li>Список дел (to‑do) с локальным хранением</li>
-                    <li>Галерея изображений с подписями</li>
+                    <li>Галерея изображений с подписями <mark>(с подписями)</mark></li>
                 </ul>
             </article>
             <article>
                 <h3>FAQ</h3>
                 <details>
                     <summary>Как связаться по проектам?</summary>
-                    <p>Напишите на почту или в мессенджер — контакты ниже.</p>
+                    <p>Напишите на почту или в мессенджер — контакты ниже. Старые каналы связи <del>пока недоступны</del>.</p>
                 </details>
                 <details>
                     <summary>Можно предложить идею?</summary>
-                    <p>Да, с удовольствием рассмотрю. Опишите задачу и желаемый результат.</p>
+                    <p>Да, с удовольствием рассмотрю. <ins>Опишите</ins> задачу и желаемый результат.</p>
                 </details>
             </article>
         </section>
 
-        <section id="contact" aria-labelledby="contact-title">
+        <section id="contact" aria-labelledby="contact-title" class="section section--contact">
             <h2 id="contact-title">Связаться</h2>
             <ul>
                 <li><a href="mailto:kochetkov.nikitaspb@gmail.com">Email</a></li>
@@ -98,9 +101,9 @@ greet('Никита');</code></pre>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>© 2025 Никита Кочетков.</p>
-        <p><a href="#projects">К началу списка</a> · <a href="index.html">На главную</a></p>
+        <p><a class="footer__link" href="#projects">К началу списка</a> · <a class="footer__link" href="index.html">На главную</a></p>
     </footer>
 </body>
 </html>
