--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <section id="home" class="section section--home" aria-labelledby="home-title">
             <h1 id="home-title">Привет! Я начинающий разработчик</h1>
             <figure class="figure">
-                <img src="https://cdnstatic.rg.ru/uploads/images/207/52/27/2p_udalenka_v_2k.jpg" alt="Портрет разработчика" width="200" height="200">
-                <figcaption class="figure__caption">Портрет разработчика</figcaption>
+                <img src="2025-10-08 08.27.10.jpg" alt="Фото Никиты Кочеткова" width="200" height="200">
+                <figcaption class="figure__caption">Никита Кочетков</figcaption>
             </figure>
-            <p>Делаю небольшие учебные и пет‑проекты, учусь веб‑разработке и люблю аккуратную семантическую разметку.</p>
+            <p>Делаю небольшие учебные и пет-проекты, учусь веб-разработке и люблю аккуратную семантическую разметку.</p>
             <p>На этом сайте вы найдёте краткую информацию обо мне, примеры кода и способы связи.</p>
         </section>
 
@@ -42,21 +42,68 @@
         </section>
 
         <section id="projects" class="section section--projects" aria-labelledby="projects-title">
-            <h2 id="projects-title">Проекты</h2>
-            <article class="card" aria-labelledby="proj-1-title">
-                <h3 class="card__title" id="proj-1-title">Небольшой скрипт вывода сообщения</h3>
-                <p class="card__text">Простейший пример использования консоли для вывода текста. Код приведён как демонстрация оформления в теге <code>code</code>.</p>
-                <pre><code>console.log('Hello, world!');</code></pre>
-            </article>
-            <article class="card" aria-labelledby="proj-2-title">
-                <h3 class="card__title" id="proj-2-title">Функция сложения</h3>
-                <p class="card__text">Ещё один минимальный пример с объявлением функции и вызовом.</p>
-                <pre><code>function sum(a, b) {
-  return a + b;
+    <h2 id="projects-title">Проекты</h2>
+
+    <article class="card" aria-labelledby="proj-1-title">
+        <h3 class="card__title" id="proj-1-title">Алгоритм Дейкстры на C++</h3>
+        <p class="card__text">Пример реализации классического алгоритма поиска кратчайших путей в графе с использованием очереди с приоритетом.</p>
+        <pre><code class="language-cpp">
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+using namespace std;
+
+const int INF = 1e9;
+
+void dijkstra(int start, vector&lt;vector&lt;pair&lt;int,int&gt;&gt;&gt;&amp; graph) {
+    int n = graph.size();
+    vector&lt;int&gt; dist(n, INF);
+    dist[start] = 0;
+    priority_queue&lt;pair&lt;int,int&gt;, vector&lt;pair&lt;int,int&gt;&gt;, greater&lt;&gt;&gt; pq;
+    pq.push({0, start});
+
+    while (!pq.empty()) {
+        auto [d, u] = pq.top();
+        pq.pop();
+        if (d != dist[u]) continue;
+
+        for (auto [v, w] : graph[u]) {
+            if (dist[v] &gt; d + w) {
+                dist[v] = d + w;
+                pq.push({dist[v], v});
+            }
+        }
+    }
+
+    for (int i = 0; i &lt; n; ++i)
+        cout &lt;&lt; "Кратчайшее расстояние до " &lt;&lt; i &lt;&lt; " = " &lt;&lt; dist[i] &lt;&lt; endl;
 }
 
-sum(2, 3);</code></pre>
-            </article>
+int main() {
+    vector&lt;vector&lt;pair&lt;int,int&gt;&gt;&gt; graph = {
+        {{1, 2}, {2, 4}},
+        {{2, 1}, {3, 7}},
+        {{3, 3}},
+        {}
+    };
+    dijkstra(0, graph);
+}
+        </code></pre>
+    </article>
+
+    <article class="card" aria-labelledby="proj-2-title">
+        <h3 class="card__title" id="proj-2-title">Часть кода из контроллера владельца (Java)</h3>
+        <p class="card__text">Фрагмент backend-части проекта на Java с использованием Spring Boot. Пример обработчика POST-запроса для создания владельца.</p>
+        <pre><code class="language-java">
+@PostMapping
+@Operation(summary = "Create a new owner")
+public OwnerDTO createOwner(@RequestBody OwnerDTO ownerDTO) {
+    return ownerService.createOwner(ownerDTO);
+}
+        </code></pre>
+    </article>
+</section>
+
             <article class="card" aria-labelledby="proj-3-title">
                 <h3 class="card__title" id="proj-3-title">Фрагмент HTML‑карточки</h3>
                 <p class="card__text">Небольшая HTML‑разметка карточки проекта без стилей.</p>
