--- a/projects.html
+++ b/projects.html
@@ -30,43 +30,19 @@
             <ol>
                 <li>
                     <article class="card">
-                        <h3 class="card__title"><a href="#proj-console">Консольный скрипт</a></h3>
-                        <p class="card__text">Минимальный проект с выводом сообщения в консоль.</p>
+                        <h3 class="card__title"><a href="#proj-console">Алгоритмы с структуры данных</a></h3>
+                        <p class="card__text">Здесь представлены алгоритмы, которые были написаны мной во время учёбы.</p>
                         <p><a id="proj-console" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
                 <li>
                     <article class="card">
-                        <h3 class="card__title"><a href="#proj-sum">Функция сложения</a></h3>
-                        <p class="card__text">Небольшой пример с объявлением и использованием функции.</p>
+                        <h3 class="card__title"><a href="#proj-sum">Проект на языке java.</a></h3>
+                        <p class="card__text">Проект на языке java, написанный во время обучения на втором курсе.</p>
                         <p><a id="proj-sum" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
                     </article>
                 </li>
-                <li>
-                    <article class="card">
-                        <h3 class="card__title"><a href="#proj-card">HTML‑карточка</a></h3>
-                        <p class="card__text">Фрагмент разметки карточки проекта.</p>
-                        <p><a id="proj-card" href="https://github.com/voodoo239" rel="noopener">Репозиторий/профиль</a></p>
-                    </article>
-                </li>
             </ol>
-
-            <section aria-labelledby="samples-title" class="section section--samples">
-                <h3 id="samples-title">Небольшие примеры кода</h3>
-                <article class="card">
-                    <h4 class="card__title">Пример 1 — вывод в консоль</h4>
-                    <pre><code>console.log('Hello from projects page');</code></pre>
-                </article>
-                <article class="card">
-                    <h4 class="card__title">Пример 2 — простая функция</h4>
-                    <pre><code>function greet(name) {
-  return 'Привет, ' + name + '!';
-}
-
-greet('Никита');</code></pre>
-                </article>
-            </section>
-        </section>
 
         <section id="extras" aria-labelledby="extras-title" class="section section--extras">
             <h2 id="extras-title">Дополнительно</h2>
@@ -75,7 +51,7 @@ greet('Никита');</code></pre>
                 <ul>
                     <li>Мини‑блог на чистом HTML‑контенте</li>
                     <li>Список дел (to‑do) с локальным хранением</li>
-                    <li>Галерея изображений с подписями <mark>(с подписями)</mark></li>
+                    <li>Галерея изображений с подписями</li>
                 </ul>
             </article>
             <article>
@@ -103,7 +79,7 @@ greet('Никита');</code></pre>
 
     <footer class="footer">
         <p>© 2025 Никита Кочетков.</p>
-        <p><a class="footer__link" href="#projects">К началу списка</a> · <a class="footer__link" href="index.html">На главную</a></p>
+        <p><a class="footer__link" href="#projects">К началу списка </a>  <a class="footer__link" href="index.html"> На главную</a></p>
     </footer>
 </body>
 </html>
