--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="nav__item"><a class="nav__link" href="#home">Главная</a></li>
                 <li class="nav__item"><a class="nav__link" href="#about">Обо мне</a></li>
                 <li class="nav__item"><a class="nav__link" href="#projects">Проекты</a></li>
-                <li class="nav__item"><a class="nav__link" href="#gallery">Фото</a></li>
+                <li class="nav__item"><a class="nav__link" href="#langs">Языки</a></li>
                 <li class="nav__item"><a class="nav__link" href="projects.html">Все проекты</a></li>
                 <li class="nav__item"><a class="nav__link" href="#tech">Технологии</a></li>
                 <li class="nav__item"><a class="nav__link" href="#quote">Цитата</a></li>
@@ -43,13 +43,25 @@
             <p>Интересуюсь основами front‑end и знакомлюсь с back‑end. Предпочитаю начинать с простых, понятных решений, постепенно усложняя проекты по мере роста навыков. <mark>Цель</mark> — делать чистые и понятные интерфейсы.</p>
         </section>
 
-        <section id="gallery" class="section section--gallery" aria-labelledby="gallery-title">
-            <h2 id="gallery-title">Фото</h2>
-            <div class="gallery">
-                <img src="2025-10-08 08.27.10.jpg" alt="Фото 1" width="200" height="200">
-                <img src="2025-10-08 08.27.10.jpg" alt="Фото 2" width="200" height="200">
-                <img src="2025-10-08 08.27.10.jpg" alt="Фото 3" width="200" height="200">
-                <img src="2025-10-08 08.27.10.jpg" alt="Фото 4" width="200" height="200">
+        <section id="langs" class="section section--langs" aria-labelledby="langs-title">
+            <h2 id="langs-title">Языки программирования</h2>
+            <div class="langs-grid">
+                <article class="card lang-card">
+                    <h3 class="card__title">C++</h3>
+                    <p class="card__text">Базовое знание языка: синтаксис, типы данных, циклы, функции, указатели, основы ООП.</p>
+                </article>
+                <article class="card lang-card">
+                    <h3 class="card__title">C#</h3>
+                    <p class="card__text">ООП: классы, наследование, интерфейсы, базовые конструкции языка и работа с .NET.</p>
+                </article>
+                <article class="card lang-card">
+                    <h3 class="card__title">Java</h3>
+                    <p class="card__text">ООП: классы, наследование, полиморфизм, коллекции, основы многопоточности и Spring.</p>
+                </article>
+                <article class="card lang-card">
+                    <h3 class="card__title">SQL</h3>
+                    <p class="card__text">Базовое знание языка: SELECT, JOIN, агрегаты, подзапросы, создание и изменение таблиц.</p>
+                </article>
             </div>
         </section>
 
