--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ public OwnerDTO createOwner(@RequestBody OwnerDTO ownerDTO) {
 
     <div class="footer-banner" aria-hidden="true">Учебный проект · Веб-разработка</div>
     <footer class="footer">
+        <p class="footer__load-time">Время загрузки страницы: <span id="page-load-time-value">—</span> секунд</p>
         <p>© 2025 Никита Кочетков. Все права защищены.</p>
         <p><a class="footer__link" href="#home">Наверх</a></p>
     </footer>
