--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="projects.html">Все проекты</a></li>
                 <li class="nav__item"><a class="nav__link" href="#projects">Проекты</a></li>
                 <li class="nav__item"><a class="nav__link" href="#extras">Дополнительно</a></li>
                 <li class="nav__item"><a class="nav__link" href="#contact">Связаться</a></li>
