--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="#home">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
                 <li class="nav__item"><a class="nav__link" href="#about">Обо мне</a></li>
                 <li class="nav__item"><a class="nav__link" href="#projects">Проекты</a></li>
                 <li class="nav__item"><a class="nav__link" href="#langs">Языки</a></li>
