--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
-                <li class="nav__item"><a class="nav__link" href="#about">Обо мне</a></li>
-                <li class="nav__item"><a class="nav__link" href="#projects">Проекты</a></li>
-                <li class="nav__item"><a class="nav__link" href="#langs">Языки</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#about">Обо мне</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#projects">Проекты</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#langs">Языки</a></li>
                 <li class="nav__item"><a class="nav__link" href="projects.html">Все проекты</a></li>
-                <li class="nav__item"><a class="nav__link" href="#tech">Технологии</a></li>
-                <li class="nav__item"><a class="nav__link" href="#quote">Цитата</a></li>
-                <li class="nav__item"><a class="nav__link" href="#contacts">Контакты</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#tech">Технологии</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#quote">Цитата</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html#contacts">Контакты</a></li>
             </ul>
         </nav>
     </header>
@@ -184,7 +184,7 @@ public OwnerDTO createOwner(@RequestBody OwnerDTO ownerDTO) {
         </section>
     </main>
 
-    <div class="footer-banner" aria-hidden="true">Учебный проект · Веб-разработка</div>
+    <div class="footer-banner" aria-hidden="true">Учебный проект  Веб-разработка</div>
     <footer class="footer">
         <p class="footer__load-time">Время загрузки страницы: <span id="page-load-time-value">—</span> секунд</p>
         <p>© 2025 Никита Кочетков. Все права защищены.</p>
