--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,7 @@
     </main>
 
     <footer class="footer">
+        <p class="footer__load-time">Время загрузки страницы: <span id="page-load-time-value">—</span> секунд</p>
         <p>© 2025 Никита Кочетков.</p>
         <p><a class="footer__link" href="#projects">К началу списка </a>  <a class="footer__link" href="index.html"> На главную</a></p>
     </footer>
